--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "vlibras-nextjs": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
